MeshNodeDetails and MeshInconsistencyException added